--- a/src/app/dash-board/masters/doctorsmaster/doctorsmaster.component.html
+++ b/src/app/dash-board/masters/doctorsmaster/doctorsmaster.component.html
@@ -1,157 +1,126 @@
 <fieldset class="scheduler-border">
     <legend class="scheduler-border">Doctors Master</legend>
-    <div class="formData">
-        <form [formGroup]="doctorForm" (ngSubmit)="onOrderClick($event, doctorForm)">
-            <div class="row">
-                <input class="form-control" path="slNo" type="hidden" readonly="true" />
-                <div class="col-xs-3 form-group">
-                    <label path="doctorname" for="doctorname" cssClass="required">Doctor Name
-                    </label>
-                    <input formControlName="doctorname" class="form-control" path="doctorname" name="doctorname"
-                        [ngClass]="{ 'is-invalid': submitted && f.doctorname.errors }" />
-                    <div *ngIf="submitted && f.doctorname.errors" class="invalid-feedback">
-                        <div *ngIf="f.doctorname.errors.required">Doctor Name is Required</div>
-                    </div>
-                </div>
-                <div class="col-xs-3 form-group">
-                    <label path="contactnumber" for="contactnumber" cssClass="required">Contact
-                        Number</label>
-                    <input formControlName="contactnumber" class="form-control" path="contactnumber"
-                        name="contactnumber" maxlength="10"
-                        [ngClass]="{ 'is-invalid': submitted && f.contactnumber.errors }" />
-                    <div *ngIf="submitted && f.contactnumber.errors" class="invalid-feedback">
-                        <!-- <div *ngIf="f.contactnumber.errors.required">Contact Number is Required</div> -->
-                        <div *ngIf="f.contactnumber.errors.required">
-                            Contact Number is Required
-                        </div>
-                        <div *ngIf="f.contactnumber.errors.minlength">
-                            Contact Number is Invalid
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3 form-group">
-                    <label path="emailid" for="emailid" cssClass="required">Email ID</label>
-                    <input formControlName="emailid" class="form-control" path="emailid" name="emailid"
-                        [ngClass]="{ 'is-invalid': submitted && f.emailid.errors }" />
-                    <div *ngIf="submitted && f.emailid.errors" class="invalid-feedback">
-                        <!-- <div *ngIf="f.emailid.errors.required">Email Id is Required</div> -->
-                        <div *ngIf="f.emailid.errors.required">
-                            Email ID is Required
-                        </div>
-                        <div *ngIf="f.emailid.errors.pattern">
-                            Email ID is Invalid
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-3 form-group">
-                    <label path="hospitalname" for="hospitalname" cssClass="required">Hospital Name
-                    </label>
-                    <input formControlName="hospitalname" class="form-control" path="hospitalname" name="hospitalname"
-                        [ngClass]="{ 'is-invalid': submitted && f.hospitalname.errors }" />
-                    <div *ngIf="submitted && f.hospitalname.errors" class="invalid-feedback">
-                        <div *ngIf="f.hospitalname.errors.required">Hospital Name is Required</div>
-                    </div>
-                </div>
-                <div class="col-xs-3 form-group">
-                    <label path="addressline1" for="addressline1" cssClass="required">Address Line 1
-                    </label>
-                    <input formControlName="addressline1" class="form-control" path="addressline1" name="addressline1"
-                        rows="5" cols="30" [ngClass]="{ 'is-invalid': submitted && f.addressline1.errors }" />
-                    <div *ngIf="submitted && f.addressline1.errors" class="invalid-feedback">
-                        <div *ngIf="f.addressline1.errors.required">Address Line 1 is Required</div>
-                    </div>
-                </div>
-                <div class="col-xs-3 form-group">
-                    <label path="addressline2" for="addressline2" cssClass="required">Address Line
-                        2</label>
-                    <input formControlName="addressline2" class="form-control" path="addressline2" name="addressline2"
-                        rows="5" cols="30" [ngClass]="{ 'is-invalid': submitted && f.addressline2.errors }" />
-                    <div *ngIf="submitted && f.addressline2.errors" class="invalid-feedback">
-                        <div *ngIf="f.addressline2.errors.required">Address Line 2 is Required</div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-3 form-group">
-                    <label path="city" for="city" cssClass="required">City</label>
-                    <input formControlName="city" class="form-control" path="city" name="city"
-                        [ngClass]="{ 'is-invalid': submitted && f.city.errors }" />
-                    <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
-                        <div *ngIf="f.city.errors.required">City is Required</div>
-                    </div>
-                </div>
-                <div class="col-xs-3 form-group">
-                    <label path="state" for="state" cssClass="required">State</label>
-                    <input formControlName="state" class="form-control" path="state" name="state"
-                        [ngClass]="{ 'is-invalid': submitted && f.state.errors }" />
-                    <div *ngIf="submitted && f.state.errors" class="invalid-feedback">
-                        <div *ngIf="f.state.errors.required">State is Required</div>
-                    </div>
-                </div>
-                <div class="col-xs-3 form-group">
-                    <label path="region" for="region" cssClass="required">Region</label>
-                    <select formControlName="region" class="form-control" name="region" id="region"
-                        [ngClass]="{ 'is-invalid': submitted && f.region.errors }">
-                        <option value="" hidden> - Select the Region - </option>
-                        <option value="null"> - Select the Region - </option>
-                        <option *ngFor="let region of regionmaster" [value]="region.region">
-                            {{region.region}}
-                        </option>
-                    </select>
-                    <div *ngIf="submitted && f.region.errors" class="invalid-feedback">
-                        <div *ngIf="f.region.errors.required">Region is Required</div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-3 form-group">
-                    <label path="pincode" for="pincode" cssClass="required">
-                        PinCode</label>
-                    <input class="form-control" path="pincode" id="pincode" name="pincode" formControlName="pincode"
-                        maxlength="6" [ngClass]="{ 'is-invalid': submitted && f.pincode.errors }" />
-                    <div *ngIf="submitted && f.pincode.errors" class="invalid-feedback">
-                        <!-- <div *ngIf="f.pincode.errors.required"> PinCode is Required
-                        </div> -->
-                        <div *ngIf="f.pincode.errors.required">
-                            PinCode is Required
-                        </div>
-                        <div *ngIf="f.pincode.errors.minlength">
-                            PinCode is Invalid
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-3">
-                    <div class="form-group">
-                        <label path="status" for="status">Status</label>
-                        <br>
-                        <label class="switch">
-                            <input type="checkbox" formControlName="status" name="status">
-                            <span class="slider round"></span>
-                        </label>
-                        <div *ngIf="submitted && f.status.errors" class="invalid-feedback">
-                            <div *ngIf="f.status.errors.required">status is required
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12 ">
-                    <div class="form-group text-right">
-                        <button type="submit" class="btn btn-primary mr-2">
-                            Submit
-                        </button>
-                        <button type="button" class="btn btn-warning mr-2" (click)="onReset()">
-                            Clear
-                        </button>
-                    </div>
-
-                </div>
-            </div>
-        </form>
-    </div>
+    <form class="my-form" [formGroup]="doctorForm" (ngSubmit)="onOrderClick($event, doctorForm,f)" #f="ngForm">
+        <mat-form-field appearance="outline">
+            <mat-label class="font">Doctor Name</mat-label>
+            <input matInput formControlName="doctorname" class="mat">
+            <mat-error
+                *ngIf="submitted && doctorForm.controls['doctorname'].invalid && doctorForm.controls['doctorname'].touched">
+                Doctor Name is required.
+            </mat-error>
+        </mat-form-field>
+        &nbsp;
+        &nbsp;
+        <mat-form-field appearance="outline">
+            <mat-label class="font">Email Address</mat-label>
+            <input matInput placeholder="Email" formControlName="emailid" class="mat">
+            <mat-error
+                *ngIf="submitted && doctorForm.controls['emailid'].hasError('required') && doctorForm.controls['emailid'].touched">
+                Email is required.
+            </mat-error>
+            <mat-error
+                *ngIf="doctorForm.controls['emailid'].hasError('email') && doctorForm.controls['emailid'].touched">
+                Invalid email format.
+            </mat-error>
+        </mat-form-field>
+        &nbsp;
+        &nbsp;
+        <mat-form-field appearance="outline">
+            <mat-label class="font">Contact Number</mat-label>
+            <input matInput placeholder="contactnumber" formControlName="contactnumber" class="mat">
+            <mat-error
+                *ngIf="submitted && doctorForm.controls['contactnumber'].hasError('required') && doctorForm.controls['contactnumber'].touched">
+                contactnumber is required.
+            </mat-error>
+            <mat-error
+                *ngIf="doctorForm.controls['contactnumber'].hasError('pattern') && doctorForm.controls['contactnumber'].touched">
+                Please enter a valid 10-digit contactnumber.
+            </mat-error>
+        </mat-form-field>
+        &nbsp;
+        &nbsp;
+        <mat-form-field appearance="outline">
+            <mat-label class="font">Hospital Name</mat-label>
+            <input matInput formControlName="hospitalname" class="mat">
+            <mat-error
+                *ngIf="submitted && doctorForm.controls['hospitalname'].invalid && doctorForm.controls['hospitalname'].touched">
+                Hospital Name is required.
+            </mat-error>
+        </mat-form-field>
+        <br><br>
+        <mat-form-field appearance="outline">
+            <mat-label class="font">Address Line 1</mat-label>
+            <input matInput formControlName="addressline1" class="mat">
+            <mat-error
+                *ngIf="submitted && doctorForm.controls['addressline1'].invalid && doctorForm.controls['addressline1'].touched">
+                Address Line 1 is required.
+            </mat-error>
+        </mat-form-field>
+        &nbsp;
+        &nbsp;
+        <mat-form-field appearance="outline">
+            <mat-label class="font">Address Line 2</mat-label>
+            <input matInput formControlName="addressline2" class="mat">
+            <mat-error
+                *ngIf="submitted && doctorForm.controls['addressline2'].invalid && doctorForm.controls['addressline2'].touched">
+                Address Line 2 is required.
+            </mat-error>
+        </mat-form-field>
+        &nbsp;
+        &nbsp;
+        <mat-form-field appearance="outline">
+            <mat-label class="font">City</mat-label>
+            <input matInput formControlName="city" class="mat">
+            <mat-error *ngIf="submitted && doctorForm.controls['city'].invalid && doctorForm.controls['city'].touched">
+                City is required.
+            </mat-error>
+        </mat-form-field>
+        &nbsp;
+        &nbsp;
+        <mat-form-field appearance="outline">
+            <mat-label class="font">State</mat-label>
+            <input matInput formControlName="state" class="mat">
+            <mat-error
+                *ngIf="submitted && doctorForm.controls['state'].invalid && doctorForm.controls['state'].touched">
+                State is required.
+            </mat-error>
+        </mat-form-field>
+        <br> <br>
+        <mat-form-field color="region.value!" appearance="outline">
+            <mat-label>Region</mat-label>
+            <mat-select matInput formControlName="region" required>
+                <mat-option value="primary">- Select the Region -</mat-option>
+                <mat-option *ngFor="let region of regionmaster" [value]="region.region">
+                    {{region.region}}</mat-option>
+            </mat-select>
+            <mat-error
+                *ngIf="submitted && doctorForm.controls['region'].invalid && doctorForm.controls['region'].touched">
+                Region is required.
+            </mat-error>
+        </mat-form-field>
+        &nbsp;
+        &nbsp;
+        <mat-form-field appearance="outline">
+            <mat-label class="font">PinCode</mat-label>
+            <input class="mat" formControlName="pincode" matInput>
+            <mat-error
+                *ngIf="submitted && doctorForm.controls['pincode'].hasError('required') && doctorForm.controls['pincode'].touched">
+                pincode is required.
+            </mat-error>
+            <mat-error
+                *ngIf="doctorForm.controls['pincode'].hasError('pattern') && doctorForm.controls['pincode'].touched">
+                Please enter a valid 6-digit pincode.
+            </mat-error>
+        </mat-form-field>
+        &nbsp;
+        &nbsp;
+        <mat-label>Status :
+            <mat-slide-toggle formControlName="status"></mat-slide-toggle>
+        </mat-label>
+        <br>
+        <button mat-raised-button class="material-btn mr-2" type="button" (click)="onReset(f)">Clear</button>
+        <button mat-raised-button class="material-btn mr-2" type="submit">Submit</button>
+    </form>
 </fieldset>
 
 <fieldset class="scheduler-border">
