--- a/src/app/dash-board/booking/caseentry/caseentryy/caseentryy.component.css
+++ b/src/app/dash-board/booking/caseentry/caseentryy/caseentryy.component.css
@@ -15,3 +15,9 @@
     height: 37px;
     margin-top: 4px;
 }
+
+.ang-form {
+    flex-direction: row;
+    box-sizing: border-box;
+    display: inline-block;
+}
