--- a/src/app/dash-board/side-menu/side-menu.component.html
+++ b/src/app/dash-board/side-menu/side-menu.component.html
@@ -78,7 +78,7 @@
                             </div>
                         </mat-list>
                         <!-- ------------second ------------ -->
-                        <mat-list id="dropdown" title="Booking" *ngIf="role == 'Admin'">
+                        <mat-list id="dropdown" title="Booking">
                             <a data-toggle="collapse" href="#Booking"
                                 [ngClass]="parentMenuString == 'Booking' ? 'is-active' : ''">
                                 <mat-icon [ngClass]="parentMenuString == 'Booking' ? 'is-active' : ''"
