--- a/src/app/dash-board/booking/appointment/bookingentry/bookingentry.component.html
+++ b/src/app/dash-board/booking/appointment/bookingentry/bookingentry.component.html
@@ -8,8 +8,9 @@
         &nbsp;
         &nbsp;
         <mat-form-field appearance="outline">
-            <mat-label>Executive</mat-label>
-            <mat-select formControlName="mslno">
+            <mat-label class="font">Executive</mat-label>
+            <mat-select formControlName="mslno" class="mat">
+                <mat-option>- Select the Executive - </mat-option>
                 <mat-option *ngFor="let mslno of machiness" [value]="mslno.slNo">
                     {{mslno.machinename}}
                 </mat-option>
@@ -22,8 +23,9 @@
         &nbsp;
         &nbsp;
         <mat-form-field appearance="outline">
-            <mat-label>Doctor</mat-label>
-            <mat-select formControlName="dslno">
+            <mat-label class="font">Doctor</mat-label>
+            <mat-select formControlName="dslno" class="mat">
+                <mat-option>- Select the Doctor - </mat-option>
                 <mat-option *ngFor="let dslno of Doctormaster" [value]="dslno.slNo">
                     {{dslno.doctorname}}
                 </mat-option>
@@ -37,8 +39,9 @@
         &nbsp;
         &nbsp;
         <mat-form-field appearance="outline">
-            <mat-label>Hospital</mat-label>
-            <mat-select formControlName="hospital">
+            <mat-label class="font">Hospital</mat-label>
+            <mat-select formControlName="hospital" class="mat">
+                <mat-option>- Select the Hospital - </mat-option>
                 <mat-option *ngFor="let hospital of Doctormaster" [value]="hospital.hospitalname">
                     {{hospital.hospitalname}}
                 </mat-option>
@@ -50,8 +53,9 @@
         </mat-form-field>
         <br>
         <mat-form-field appearance="outline">
-            <mat-label>Employee</mat-label>
-            <mat-select formControlName="staff">
+            <mat-label class="font">Employee</mat-label>
+            <mat-select formControlName="staff" class="mat">
+                <mat-option>- Select the Employee - </mat-option>
                 <mat-option *ngFor="let staff of arr" [value]="staff.username">
                     {{staff.username}}
                 </mat-option>
@@ -65,8 +69,8 @@
         &nbsp;
         &nbsp;
         <mat-form-field appearance="outline">
-            <mat-label>Date</mat-label>
-            <input matInput [matDatepicker]="dp" formControlName="date" />
+            <mat-label class="font">Date</mat-label>
+            <input matInput [matDatepicker]="dp" formControlName="date" class="mat" />
             <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
             <mat-datepicker #dp></mat-datepicker>
             <mat-error
@@ -78,7 +82,7 @@
         &nbsp;
         &nbsp;
         <mat-form-field appearance="outline">
-            <mat-label>Time</mat-label>
+            <mat-label style="font-size: 13px;">Time</mat-label>
             <input type="time" matInput name="week" min="09:00" max="18:00" formControlName="time" inputId="timeonly" />
             <mat-error
                 *ngIf="submitted && bookingForm.controls['time'].invalid && bookingForm.controls['time'].touched">
