--- a/src/app/dash-board/booking/appointment/bookingmanagement/bookingmanagement.component.html
+++ b/src/app/dash-board/booking/appointment/bookingmanagement/bookingmanagement.component.html
@@ -13,8 +13,8 @@
         &nbsp;
         &nbsp;
         <mat-form-field appearance="outline">
-            <mat-label>Executive</mat-label>
-            <mat-select formControlName="mslno">
+            <mat-label class="font">Executive</mat-label>
+            <mat-select formControlName="mslno" class="mat">
                 <mat-option>- Select the Executive - </mat-option>
                 <mat-option *ngFor="let mslno of machiness" [value]="mslno.slNo">
                     {{mslno.machinename}}
@@ -28,8 +28,8 @@
         &nbsp;
         &nbsp;
         <mat-form-field appearance="outline">
-            <mat-label>Doctor</mat-label>
-            <mat-select formControlName="dslno">
+            <mat-label class="font">Doctor</mat-label>
+            <mat-select formControlName="dslno" class="mat">
                 <mat-option>- Select the Doctor - </mat-option>
                 <mat-option *ngFor="let dslno of Doctormaster" [value]="dslno.slNo">
                     {{dslno.doctorname}}
@@ -44,8 +44,8 @@
         &nbsp;
         &nbsp;
         <mat-form-field appearance="outline">
-            <mat-label>Hospital</mat-label>
-            <mat-select formControlName="hospital">
+            <mat-label class="font">Hospital</mat-label>
+            <mat-select formControlName="hospital" class="mat">
                 <mat-option>- Select the Hospital - </mat-option>
                 <mat-option *ngFor="let hospital of Doctormaster" [value]="hospital.hospitalname">
                     {{hospital.hospitalname}}
@@ -58,8 +58,8 @@
         </mat-form-field>
         <br>
         <mat-form-field appearance="outline">
-            <mat-label>Employee</mat-label>
-            <mat-select formControlName="staff">
+            <mat-label class="font">Employee</mat-label>
+            <mat-select formControlName="staff" class="mat">
                 <mat-option>- Select the Employee - </mat-option>
                 <mat-option *ngFor="let staff of arr" [value]="staff.username">
                     {{staff.username}}
@@ -74,8 +74,8 @@
         <!-- &nbsp; -->
         &nbsp;
         <mat-form-field appearance="outline">
-            <mat-label>Date</mat-label>
-            <input matInput [matDatepicker]="date" formControlName="date">
+            <mat-label class="font">Date</mat-label>
+            <input matInput [matDatepicker]="date" formControlName="date" class="mat">
             <mat-datepicker-toggle matSuffix [for]="date"></mat-datepicker-toggle>
             <mat-datepicker #date></mat-datepicker>
             <mat-error
@@ -87,8 +87,9 @@
         &nbsp;
         &nbsp;
         <mat-form-field appearance="outline">
-            <mat-label>Time</mat-label>
-            <input type="time" matInput name="week" min="09:00" max="18:00" formControlName="time" inputId="timeonly" />
+            <mat-label style="font-size: 13px;">Time</mat-label>
+            <input type="time" matInput name="week" min="09:00" max="18:00" formControlName="time" inputId="timeonly"
+                class="mat" />
             <mat-error
                 *ngIf="submitted && bookingForm.controls['time'].hasError('required') && bookingForm.controls['time'].touched">
                 Time is required.
