--- a/src/app/dash-board/header/header.component.html
+++ b/src/app/dash-board/header/header.component.html
@@ -16,7 +16,7 @@
                 </h2>
             </div>
 
-            <div>
+            <div class="mat-nav">
                 <mat-nav-list class="setting-menu-list pull-right mat-head">
                     <a (click)="submit()" [ngClass]="
                                 parentMenuString == 'Logout' ? 'is-actived' : ''
@@ -24,7 +24,7 @@
                         <i class="fa fa-sign-out color" aria-hidden="true" title="Logout"></i></a>
                     <!-- <mat-icon aria-hidden="true" title="Logout" style="margin-top: 2px;">logout</mat-icon></a> -->
                 </mat-nav-list>
-                <mat-nav-list class="setting-menu-list pull-right mat-head">
+                <mat-nav-list class="setting-menu-list pull-right mat-head" *ngIf="role == 'Admin'">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
                         style="color: white" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"
                         class="bttn">
