--- a/src/app/dash-board/masters/doctorsmaster/doctorsmaster.component.html
+++ b/src/app/dash-board/masters/doctorsmaster/doctorsmaster.component.html
@@ -87,8 +87,8 @@
         </mat-form-field>
         <br> <br>
         <mat-form-field color="region.value!" appearance="outline">
-            <mat-label>Region</mat-label>
-            <mat-select matInput formControlName="region" required>
+            <mat-label class="font">Region</mat-label>
+            <mat-select matInput formControlName="region" required class="mat">
                 <mat-option value="primary">- Select the Region -</mat-option>
                 <mat-option *ngFor="let region of regionmaster" [value]="region.region">
                     {{region.region}}</mat-option>
@@ -114,9 +114,9 @@
         </mat-form-field>
         &nbsp;
         &nbsp;
-        <mat-label>Status :
+        <label>Status :
             <mat-slide-toggle formControlName="status"></mat-slide-toggle>
-        </mat-label>
+        </label>
         <br>
         <button mat-raised-button class="material-btn mr-2" type="button" (click)="onReset(f)">Clear</button>
         <button mat-raised-button class="material-btn mr-2" type="submit">Submit</button>
