--- a/src/app/dash-board/booking/calendar-table/calendar-table.component.html
+++ b/src/app/dash-board/booking/calendar-table/calendar-table.component.html
@@ -15,7 +15,7 @@
       </div>
     </div>
 
-    <button class="btn btn-primary pull-right" (click)="addBooking(event)" *ngIf="role == 'Admin'">
+    <button class="btn btn-primary pull-right add-app" (click)="addBooking(event)" *ngIf="role == 'Admin'">
       Add Appointment
     </button>
   </div>
